--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "fs-writefile-promise": "^3.0.2",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.3",
-    "next": "14.2.11",
+    "next": "^14.2.15",
     "next-connect": "^1.0.0",
     "nodemailer": "^6.9.14",
     "path": "^0.12.7",
